--- a/te-spring-mvc/src/main/resources/archetype-resources/pom.xml
+++ b/te-spring-mvc/src/main/resources/archetype-resources/pom.xml
@@ -61,6 +61,24 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    <version>3.0.1</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-chrome-driver</artifactId>
+		    <version>3.0.1</version>
+		    <scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>1.2.4</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
